--- a/tp3/styles.css
+++ b/tp3/styles.css
@@ -16,9 +16,9 @@ h1 {
 header
  {
     background-color: aliceblue;
-    float: left;
+    float: center;
     margin: 1rem;
-    padding: 20px;
+    padding: 0px;
     box-shadow: 0px 5px 10px #333;
 }
 
@@ -31,11 +31,6 @@ section {
 }
 
 header h1 {
-    display: flex-grow: 1;
+    display: flex-grow; 1;
     text-align: right;
-
-    body {
-        background-color:antiquewhite;
-        font-size: "Playfair Display", serif;
-        font-weight: 400;
-    }
+}
