--- a/tp4/styles.css
+++ b/tp4/styles.css
@@ -7,7 +7,7 @@
     position:relative;
     width: var(--gameboardsize);
     height: var(var(--gameboardsize));
-    background-color: antiquewhite;
+    background-color: black;
     display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -16,5 +16,5 @@
 
 .gamespacer {
     position:relative;
-    background-color: aqua;
+    background-color: white;
 }
