--- a/tp4/styles.css
+++ b/tp4/styles.css
@@ -22,4 +22,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: "Playwrite NZ Basic Guides", cursive;
+    overflow: hidden;
 }
