--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,9 @@ section {
     width: 300px;
     height: 300px;
 }
-
+#coolPic{
+    box-sizing:content-box;
+}
 header h1 {
     display: flex-grow; 1;
     text-align: center;
