--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,8 @@ section {
     margin: 1rem;
     padding: 20px;
     box-shadow: 0px 5px 10px #333;
+    width: auto;
+    height: auto;
 }
 #coolPic img {
     width: 300px;
