--- a/styles.css
+++ b/styles.css
@@ -51,12 +51,12 @@ section {
     margin: 1rem;
     padding: 20px;
     box-shadow: 0px 5px 10px #333;
-    width: 300;
-    height: 200;
+    width: 200px;
+    height: 300px;
 }
 #boringfact {
-    width: 300;
-    height: 200;
+    width: 200px;
+    height: 300px;
     display: flex;
     flex-direction: column;
 }
