--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,9 @@ a:hover {
 }
 
 section:hover {
-  -ms-transform: scale(1.2); /* IE 9 */
-  -webkit-transform: scale(1.2); /* Safari 3-8 */
-  transform: scale(1.2); 
+  -ms-transform: scale(1.1); 
+  -webkit-transform: scale(1.1); 
+  transform: scale(1.1); 
 }
 
 *{
@@ -53,10 +53,6 @@ section {
     box-shadow: 0px 5px 10px #333;
     transition: transform 0.5s;
     width: 45vw;
-}
-#boringfact {
-    display: flex;
-    flex-direction: column;
 }
 
 header h1 {
