changes some aspects

--- a/tp4/styles.css
+++ b/tp4/styles.css
@@ -16,7 +16,7 @@
 
 .gamespace{
     position: relative;
-    background-color:rgb(198, 202, 206);
+    background-color:blanchedalmond;
     font-size: 10rem;
     text-transform: uppercase;
     display: flex;
