added some css to tp5

--- a/tp5/style.css
+++ b/tp5/style.css
@@ -8,11 +8,19 @@
 .cardContent {
   position: absolute;
   width: 100%;
-  height: 100;
+  height: 100%;
   transition: transform 0.5s;
+  transform-style: preserve-3d;
+
 }
 
-.cardTop,
+.cardTop {
+  .cardTop {
+  background-color: darkred;
+  color: black;
+}
+
+}
 .cardBottom {
   position: absolute;
   background-color: darkred;
@@ -23,6 +31,7 @@
   text-align: center;
   transition: transform 0.5s;
   backface-visibility: hidden;
+   transform: rotateY(180deg);
 }
 
 .cardExample:hover .cardContent {
