--- a/tp6/styles.css
+++ b/tp6/styles.css
@@ -9,11 +9,17 @@ main {
     background-color: aliceblue;
 }
 
-#Predictions {
-    width: 290px;
-    height: 450px;
+# #PredictionBox{
+    width: 100px;
+    height: 100px;
     position: absolute;
     bottom: 5px;
     left: 5px;
     background-color: white;
+}
+
+.Predictions{
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
