--- a/tp6/styles.css
+++ b/tp6/styles.css
@@ -15,7 +15,7 @@ main {
     position: absolute;
     bottom: 5px;
     left: 5px;
-    background-color: white;
+    background-color: whitesmoke;
 }
 
 .Predictions{
