--- a/tp6/styles.css
+++ b/tp6/styles.css
@@ -18,9 +18,10 @@ main {
     background-color: whitesmoke;
 }
 
-.Predictions{
-    width: 200px;
-    height: 100px;
-    border: 2px darkgrey;
-    position: absolute;
+.Predictions :nth-child(2){
+    bottom: 200px;
+}
+
+.Predictions: :nth-child (3) {
+    bottom: 400px;
 }
