--- a/tp6/styles.css
+++ b/tp6/styles.css
@@ -17,6 +17,7 @@ main {
     left: 5px;
     background-color: whitesmoke;
     overflow: auto;
+    overflow-y: hidden;
 }
 
 .Predictions:nth-child(2) {
