--- a/tp5/style.css
+++ b/tp5/style.css
@@ -1,4 +1,17 @@
 /*styles for tp5*/
+
+*root {
+  --cardsize: 200px;
+}
+
+.card {
+  position: relative;
+  width: var(--cardsize);
+  height: var(--cardsize);
+  perspective: 500px;
+
+}
+
 .cardExample {
   width:200px;
   height:200px;
@@ -22,12 +35,13 @@
   height: 100%;
   text-align: center;
   font-size: 5rem;
+  border: 2px solid black;
 }
 
 
 .cardBottom {
   position: absolute;
-  background-color: darkred;
+  background-color: blue;
   color: black;
   width: 100%;
   height: 100%;
