--- a/tp5/style.css
+++ b/tp5/style.css
@@ -36,6 +36,8 @@
   text-align: center;
   font-size: 5rem;
   border: 2px solid black;
+    border-radius: 10px;
+
 }
 
 
@@ -49,6 +51,8 @@
   text-align: center;
   transition: transform 0.5s;
   backface-visibility: hidden;
+  border: 2px solid black;
+  border-radius: 10px;
 }
 .cardBottom{
   transform: rotateY(180deg);
