change font color

--- a/tp5/style.css
+++ b/tp5/style.css
@@ -44,7 +44,7 @@
 .cardBottom {
   position: absolute;
   background-color: blue;
-  color: black;
+  color: white;
   width: 100%;
   height: 100%;
   font-size: 4rem;
