--- a/tp5/style.css
+++ b/tp5/style.css
@@ -7,7 +7,7 @@
 *root {
   --cardsize: 200px;
 }
-
+/*positions/
 .card {
   position: relative;
   width: var(--cardsize);
@@ -48,7 +48,7 @@
   transform-style: preserve-3d;
 
 }
-
+*/general card stuff/
 .cardTop {
   background-color: darkred;
   position: absolute;
@@ -61,6 +61,15 @@
     border-radius: 10px;
 
 }
+
+#gameboard {
+  background-color: beige;
+  display: grid;
+  grid-template-columns: 1fr, 1fr, 1fr, 1fr;
+  grid-template-rows: 1fr, 1fr,;
+  gap: 1rem;
+}
+
 
 
 .cardBottom {
@@ -79,6 +88,7 @@
 .cardBottom{
   transform: rotateY(180deg);
 }
+/* card pairs/
 .cardPair1:hover .cardContent {
   transform: rotateY(180deg);
   text-align: center;
