--- a/tp5/style.css
+++ b/tp5/style.css
@@ -117,6 +117,7 @@
 
 
 #gameboard {
+  position: relative;
   background-color: beige;
   display: grid;
   grid-template-columns: 1fr,1fr,1fr,1fr;
