--- a/tp5/style.css
+++ b/tp5/style.css
@@ -120,7 +120,7 @@
   position: relative;
   background-color: beige;
   display: grid;
-  grid-template-columns: 1fr,1fr,1fr,1fr;
-  grid-template-rows: 1fr,1fr,;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   gap: 1rem;
 }
