--- a/tp6/styles.css
+++ b/tp6/styles.css
@@ -4,12 +4,12 @@
 
 main {
     position: relative;
-    width:300px;
-    height:450px;
+    width: 300px;
+    height: 450px;
     background-color: aliceblue;
 }
 
-#PredictionBox{
+#PredictionBox {
     width: 290px;
     height: 100px;
     position: absolute;
@@ -18,7 +18,12 @@ main {
     background-color: whitesmoke;
     overflow: auto;
     overflow-y: hidden;
-    
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 3px 3px;
+    grid-auto-flow: row;
+}
 }
 
 .Predictions {
@@ -26,12 +31,5 @@ main {
     height: 100%;
     width: 200px;
     top: 0;
-}
 
-.Predictions:nth-child(2) {
-    left: 200px;
-}
-
-.Predictions:nth-child(3) {
-    left: 400px;
 }
