--- a/tp5/style.css
+++ b/tp5/style.css
@@ -37,11 +37,8 @@
 .cardTop {
   background-color: darkred;
   position: absolute;
-  color: black;
   width: 100%;
   height: 100%;
-  text-align: center;
-  font-size: 5rem;
   border: 2px solid black;
   border-radius: 10px;
   backface-visibility: hidden;
@@ -50,11 +47,8 @@
 .cardBottom {
   position: absolute;
   background-color: blue;
-  color: white;
   width: 100%;
   height: 100%;
-  font-size: 4rem;
-  text-align: center;
   transition: transform 0.5s;
   backface-visibility: hidden;
   border: 2px solid black;
@@ -75,21 +69,21 @@
 }
 
 .cardPair1 .cardBottom {
-  background-color: blue;
+  background-color: black;
 }
 
 .cardPair2 .cardBottom {
-  background-color: aquamarine;
+  background-color: lightpink;
 }
 
 
 .cardPair3 .cardBottom {
-  background-color: green;
+  background-color: white;
 }
 
 
 .cardPair4 .cardBottom {
-  background-color: orchid
+  background-color: lightgrey
 }
 
 
