--- a/tp5/style.css
+++ b/tp5/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --cardsize: 200px;
+  --cardsize: 40vw;
 }
 
 .card {
@@ -22,6 +22,7 @@
   height: var(--cardsize);
   perspective: 500px;
   margin-bottom: 1rem;
+  
 
 }
 
@@ -42,6 +43,7 @@
   border: 2px solid black;
   border-radius: 10px;
   backface-visibility: hidden;
+  
 }
 
 .cardBottom {
@@ -93,7 +95,31 @@
 #gameboard {
   position: relative;
   display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr ;
+  gap: 1rem;
+  width: 100vw;
+}
+
+@media screen and (orientation: landscape) {
+  :root {
+    --cardsize: 20vw;
+  .card {
+  width: 200px;
+  height: 300px;
+  margin-bottom: 25px;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+  }
+
+#gameboard {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 1rem;
+}
+
 }
