--- a/tp5/style.css
+++ b/tp5/style.css
@@ -71,7 +71,8 @@
 }
 
 .cardPair1 .cardBottom {
-  background-color: black;
+  background-color: #e5e5f7;
+
 }
 
 .cardPair2 .cardBottom {
@@ -99,6 +100,9 @@
   grid-template-rows: 1fr 1fr 1fr 1fr ;
   gap: 1rem;
   width: 100vw;
+  opacity: 0.8;
+background: radial-gradient(circle, transparent 20%, #e5e5f7 20%, #e5e5f7 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, #e5e5f7 20%, #e5e5f7 80%, transparent 80%, transparent) 25px 25px, linear-gradient(#444cf7 2px, transparent 2px) 0 -1px, linear-gradient(90deg, #444cf7 2px, #e5e5f7 2px) -1px 0;
+background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
 }
 
 @media screen and (orientation: landscape) {
