--- a/tp6/styles.css
+++ b/tp6/styles.css
@@ -17,17 +17,19 @@ main {
     left: 5px;
     background-color: whitesmoke;
     overflow: auto;
-    overflow-y: hidden;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 3px 3px;
-    grid-auto-flow: row;
+    display: grid; 
+  grid-template-columns: 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 1fr; 
+  gap: 3px 3px; 
+  grid-auto-flow: row;
+   
 }
 
 .Predictions {
     position: absolute;
+    border: 2px solid black;
     height: 100%;
     width: 200px;
     top: 0;
+    align-content: space-evenly; 
 }
