--- a/tp6/styles.css
+++ b/tp6/styles.css
@@ -22,8 +22,17 @@ main {
   grid-template-rows: 1fr 1fr; 
   gap: 3px 3px; 
   grid-auto-flow: row;
+  overflow-y: hidden;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+ 
    
 }
+
+ #Predictions::-webkit-scrollbar {
+    display: none;
+ }
+
 
 .Predictions {
     border: 2px solid black;
@@ -31,4 +40,5 @@ main {
     width: 200px;
     top: 0;
     align-content: space-evenly; 
+    user-select: none;
 }
