--- a/tp5/style.css
+++ b/tp5/style.css
@@ -68,6 +68,9 @@
 
 .card img {
   width: 100%;
+  height: 100%;
+  object-fit: fill;
+  border: 2px solid black;
 }
 
 .cardPair1 .cardBottom {
@@ -114,12 +117,6 @@ background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
   margin-bottom: 25px;
 }
 
-.card img {
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-}
-  }
 
 #gameboard {
   grid-template-columns: 1fr 1fr 1fr 1fr;
