--- a/tp6/styles.css
+++ b/tp6/styles.css
@@ -15,36 +15,108 @@ body {
 
 main {
     position: relative;
-    width: 108vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: azure;
-
     display: grid;
     grid-template-columns: 50vw 50vw;
-    grid-template-rows: 50vh 30vh var(--predictionBoxHeight)
+    grid-template-rows: 50vh 30vh 10vh var(--predictionBoxHeight);
     grid-template-areas: 
    'currentInfo    currentInfo'
     'currentHum     currentWind'
+    'future         future'
     'future         future';
 }
 
+
 #currentInfo {
+    position: relative;
     grid-area:currentInfo;
     background-color: blanchedalmond;
+    border-bottom: 1px solid white;
+}
+
+
+#currentTemp {
+    position: absolute;
+    grid-area: currentTemp;
+    font-size: 5rem;
+    left: 1rem;
+}
+
+#currentStatus {
+    position: absolute;
+    bottom: 1rem;
+    font-size: 2rem;
+    left: 1rem;
 }
 
 #currentHumity {
+    position: relative;
     grid-area: currentHum;
     background-color: bisque;
+    border-bottom: 1px solid white;
+    border-right: 1px solid white;
 }
 
 #currentWind {
+    position: relative;
     grid-area: currentWind;
     background-color: beige;
-
+    border-bottom: 1px solid white;
 }
 
 #futureInfo {
-    grid-row: future;
+    position: relative;
+    grid-area: future;
     background-color: cornsilk;
+    overflow: auto;
+    overflow-y: hidden;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
+
+#futureinfo::-webkit-scrollbar {
+    display: none;}
+
+.futureDay {
+position:absolute;
+width: var(--predictionBoxWidth);
+height: var(--predictionBoxHeight);
+border-right: 1px solid gray;
+}
+
+.futureDay:nth-child(2) {
+    left: var(--predictionBoxWidth);
+}
+
+.futureDay:nth-child(3) {
+    left: calc( var(--predictionBoxWidth)*2);
+    border-right: none
+}
+.futureDay:nth-child(4) {
+    left: calc( var(--predictionBoxWidth)*3);
+    border-right: none;
+}
+
+@media screen and (orientation: landscape) {
+
+    :root {
+        --predictionBoxWidth: 30vw;
+        --predictionBoxHeight: calc( 100vh / 3 );
+    }
+
+    main {
+        grid-template-columns: 60vw 40vw;
+        grid-template-rows: var(--predictionBoxHeight) var(--predictionBoxHeight) var(--predictionBoxHeight);
+        grid-template-areas:
+            'currentInfo    currentHum'
+            'currentInfo    currentWind'
+            'currentInfo    future'
+            'future         future';
+    }
+
+    #currentInfo {
+        border-bottom: none;
+        border-right: 1px solid white;
+    }
