--- a/tp6/styles.css
+++ b/tp6/styles.css
@@ -17,6 +17,7 @@ main {
     position: relative;
     width: 100%;
     height: 100%;
+    
     background-color: azure;
     display: grid;
     grid-template-columns: 50vw 50vw;
@@ -105,12 +106,12 @@ border-right: 1px solid gray;
 
     :root {
         --predictionBoxWidth: 30vw;
-        --predictionBoxHeight: calc( 100vh / 4 );
+        --predictionBoxHeight: calc( 100vh / 3 );
     }
 
     main {
-        grid-template-columns: 60vw 40vw;
-        grid-template-rows: var(--predictionBoxHeight) var(--predictionBoxHeight) var(--predictionBoxHeight) var(--predictionBoxHeight);
+        grid-template-columns: 50vw 50vw;
+        grid-template-rows:50vh 30vh var(--predictionBoxHeight) var(--predictionBoxHeight) var(--predictionBoxHeight) var(--predictionBoxHeight);
         grid-template-areas:
             'currentInfo    currentHum'
             'currentInfo    currentWind'
@@ -125,8 +126,9 @@ border-right: 1px solid gray;
 }
 
 @media (max-width: 600px) {
-  .futureInfo {
-    flex-direction: column;
+ 
+    .futureInfo {
+    flex-direction: grid;
   }
 }
     .futureInfo {
@@ -142,8 +144,8 @@ border-right: 1px solid gray;
 
     background-color: #bbdefb;
     height: 100%;
-    padding: 15px;
-    gap: 5px;
+    padding: 3px;
+    gap: 2px;
 
   }
 
